# marketing-agents-team

./: README.md  pyproject.toml  run_backend_terminal.py
backend/: .env.example  .gitignore  checkpoints.db-shm  checkpoints.db-wal  main.py  pyproject.toml  requirements.txt
backend/app/: agent.py  server.py  utils.py
backend/app/brew/: __init__.py  graph.py  prompts.py  state.py  workers.py
backend/app/investigator/: graph.py  prompts.py  schemas.py  state.py
backend/app/research/: __init__.py  graph.py  prompts.py  subagents.py
backend/app/search/: __init__.py  graph.py  prompts.py
backend/app/tools/: marketing.py
frontend/: components.json  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: MyAssistantRuntime.tsx  chat-interface.tsx  marketing-logo.tsx  mode-selector.tsx  perplexity-message.tsx  thread-composer-simple.tsx  thread-list.tsx  thread.tsx
